corrected mistakes incss1-2

--- a/index1-2.html
+++ b/index1-2.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="author" content="შალვა ძე" />
-    <meta name="description" content="ising CSS" />
-    <meta property="og:description"="Practising CSS" />
+    <meta name="author" content="შალვა იმნაძე" />
+    <meta name="description" content="practising CSS" />
+    <meta property="og:description" content="Practising CSS" />
     <meta property="og:image" content="./on/icon.svg" />
     <meta property="og:title" content="Interesting articles" />
-    <meta name="viewport" content="width=vice-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interesting articles</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
     <h1 id="main_Header">read some interesting articles</h1>
     <main>
         <article id="landscape_Container">
-            <img src="./images/landscape.svg" />
+            <img src="./images/landscape.svg" alt="beautiful art of landscape" title="beautiful art of landscape"/>
             <h2 id="subheader_One">stary night</h2>
             <p id="landscape_Content">Look up at the night sky, and find yourself immersed in the amazing mountain
                 range of Aspen. The starry sky combined with the breathtaking scenery creates a moment of pure
